--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ selenium = "^4.9.1"
 webdriver-manager = "^3.8.6"
 edgegpt = "^0.8.1"
 aiohttp = "^3.8.4"
+undetected-chromedriver = "^3.4.7"
 
 
 [tool.poetry.group.dev.dependencies]
