--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,7 @@ python = "^3.9"
 pyrogram = "^2.0.106"
 tgcrypto = "^1.2.5"
 python-dotenv = "^1.0.0"
-selenium = "^4.9.1"
-webdriver-manager = "^3.8.6"
-edgegpt = "^0.8.1"
-aiohttp = "^3.8.4"
-undetected-chromedriver = "^3.4.7"
+httpx = "^0.24.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,6 +21,7 @@ isort = "^5.12.0"
 pytest-cov = "^4.1.0"
 taskipy = "^1.11.0"
 ipython = "^8.14.0"
+pytest-asyncio = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
