--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-cov = "^4.1.0"
 taskipy = "^1.11.0"
 ipython = "^8.14.0"
 pytest-asyncio = "^0.21.0"
+ruff = "^0.0.287"
 
 [build-system]
 requires = ["poetry-core"]
